# utils

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findgoogletest.cmake
common/: CMakeLists.txt  log.cpp  log.h
design-patterns/: CMakeLists.txt
design-patterns/adapter/: CMakeLists.txt  class_adapter.cpp  object_adapter.cpp
design-patterns/bridge/: bridge.cpp
design-patterns/builder/: CMakeLists.txt  builder.cpp
design-patterns/chainOfResponsibility/: CMakeLists.txt  chainOfResponsibility.cpp
design-patterns/composite/: CMakeLists.txt  composite.cpp
design-patterns/context/: CMakeLists.txt  context.cpp
design-patterns/decorator/: CMakeLists.txt  decorator.cpp
design-patterns/expression/: CMakeLists.txt  expression.cpp
design-patterns/facade/: CMakeLists.txt  facade.cpp
design-patterns/factory/: CMakeLists.txt  abstractFactory.cpp  factory.cpp
design-patterns/flyweight/: flyweight.cpp
design-patterns/invoker/: CMakeLists.txt  invoke.cpp
design-patterns/iterator/: iterator.cpp
design-patterns/mediator/: CMakeLists.txt  mediator.cpp
design-patterns/memento/: CMakeLists.txt  memento.cpp
design-patterns/observer/: CMakeLists.txt  observer.cpp
design-patterns/prototype/: CMakeLists.txt  prototype.cpp  prototype_pro.cpp
design-patterns/proxy/: proxy.cpp
design-patterns/singleton/: CMakeLists.txt  singleton.cpp
design-patterns/strategy/: strategy.cpp
design-patterns/template/: CMakeLists.txt  template.cpp
design-patterns/visitor/: visitor.cpp
driver/: CMakeLists.txt
driver/gc9a01/: CMakeLists.txt  font.h  font_color.h  lcd.cc  lcd.h  lcd_fount.h  lcd_init.cc  lcd_init.h  lcd_platform.h  main.cc  pic.h  readme.md
driver/gc9a01/platform/linux/: linux_spi_lcd.cc  linux_spi_lcd.h
driver/gc9a01/platform/pi/: wiringpi_lcd.cc  wiringpi_lcd.h
package/: CMakeLists.txt  googletest.mk
python/: file_demo.py  fork.py  thread.py
python/RegEx/: regex.py
python/crawler/simple_crawler/: DataOutput.py  HtmlDownloader.py  HtmlParser.py  SiderMan.py  URLManager.py
python/data_store/: python_to_struct.py
python/network/: http_demo.py  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py
qt/Camera/: Camera.pro  widget.cpp  widget.h  widget.ui
qt/H264Analysis/: H264Analysis.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/Player/: Player.pro  configuredialog.cpp  configuredialog.h  configuredialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pushflow.cpp  pushflow.h  pushflow.ui  videoplayer.cpp  videoplayer.h
qt/mixing/: CMakeLists.txt  Rectangle.qml  main.cpp  main.qml  mixing.cpp  mixing.h  qml.qrc
src/: CMakeLists.txt
src/image/: bmp.cpp  bmp.h
src/io/: io_wrap.cpp  io_wrap.h
src/media/: h264_wrap.cpp  h264_wrap.h  rtmp_server.cpp  rtmp_server.h
src/mem-pool/: mem_pool.h
src/net/: net_wrap.h  tcp_wrap.cpp  tcp_wrap.h  tls_wrap.cpp  tls_wrap.h  udp_wrap.cpp  udp_wrap.h
src/redblack-tree/: rb-tree.h
src/system-monitor/: proc.cpp  proc.h
src/thread-pool/: condition.h  job.h  mutex.h  thread.h  thread_manager.h  thread_pool.cpp  thread_pool.h  worker_thread.cpp  worker_thread.h
src/unittest/: CMakeLists.txt  h264_wrap_example.cpp  rbt_example.cpp  rtmp_server_example.cpp
test/: CMakeLists.txt  proc_test.cpp  test.cpp
test/c++/: CMakeLists.txt  type_cast.cpp
test/camera/: CMakeLists.txt  opencv_camera.cpp
test/cmake_find_package/: CMakeLists.txt  demo.cpp  demo.h  demo_main.cpp
test/cmake_find_package/cmake/: FindDEMOLIB.cmake
test/ffmpeg/: CMakeLists.txt  ffmpeg_rtmp.cpp
test/gprof/: Makefile  test.cpp
test/image/: CMakeLists.txt  bmp_test.cpp
test/librtmp/: CMakeLists.txt  flv.h  send_flv.cpp  send_h264.cpp
test/live555/: CMakeLists.txt  live_H264VideoSource.cpp  live_H264VideoSource.hh  main.cpp
test/msg/: client.cc  server.cc
test/network/: CMakeLists.txt  epoll_server.cpp  tcp_client.py
test/opencv/opencv_camera/: camera.cpp  camera.h  camera.ui  opencv_camera.pro  opencv_camera.pro.user.20
test/share-memory/: CMakeLists.txt  shm_com.h  shm_customer.cpp  shm_producer.cpp
test/sqlite3/: CMakeLists.txt  sqlite_demo.cpp
test/ssl/: CMakeLists.txt  ssl_client.cpp  ssl_server.cpp
test/thread_pool/: CMakeLists.txt  main.cpp
test/tls/: Makefile  client.cpp  server.cpp
test/tls/ca/: ca-cert.pem  ca-cert.srl  ca-key.pem  ca-req.csr  ca.p12
test/tls/client/: client-cert.pem  client-key.pem  client-req.csr  client.p12
test/tls/server/: server-cert.pem  server-key.pem  server-req.csr  server.p12
test/unittest/: CMakeLists.txt
