ADD_SUBDIRECTORY(singleton)
ADD_SUBDIRECTORY(prototype)
ADD_SUBDIRECTORY(factory)
ADD_SUBDIRECTORY(builder)
ADD_SUBDIRECTORY(proxy)
ADD_SUBDIRECTORY(adapter)
ADD_SUBDIRECTORY(bridge)
ADD_SUBDIRECTORY(decorator)
ADD_SUBDIRECTORY(facade)
ADD_SUBDIRECTORY(flyweight)
ADD_SUBDIRECTORY(composite)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(invoker)
ADD_SUBDIRECTORY(chainOfResponsibility)
ADD_SUBDIRECTORY(context)
ADD_SUBDIRECTORY(observer)
ADD_SUBDIRECTORY(mediator)
ADD_SUBDIRECTORY(iterator)
ADD_SUBDIRECTORY(visitor)
ADD_SUBDIRECTORY(memento)
ADD_SUBDIRECTORY(expression)